--- a/Rotari_Olivia_ActivitateSD2025/Rotari_Olivia_ActivitateSD2025.vcxproj
+++ b/Rotari_Olivia_ActivitateSD2025/Rotari_Olivia_ActivitateSD2025.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Seminar01.c" />
+    <ClCompile Include="Seminar1.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
