--- a/Rotari_Olivia_ActivitateSD2025/Rotari_Olivia_ActivitateSD2025.vcxproj
+++ b/Rotari_Olivia_ActivitateSD2025/Rotari_Olivia_ActivitateSD2025.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Seminar01.c" />
     <ClCompile Include="Seminar1.c" />
+    <ClCompile Include="Seminar3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
