Laborator02_Vectori_Suplimentar

--- a/Rotari_Olivia_ActivitateSD2025/Rotari_Olivia_ActivitateSD2025.vcxproj
+++ b/Rotari_Olivia_ActivitateSD2025/Rotari_Olivia_ActivitateSD2025.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Laborator02_Vectori_Suplimentar.c" />
+    <ClCompile Include="Laborator_1_ functii_si_crearea_structurii_Telefon_suplimentar.c" />
     <ClCompile Include="Seminar01.c" />
     <ClCompile Include="Seminar2.c" />
     <ClCompile Include="Seminar3.c" />
